# python-executable-script-devcontainer

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/myproj/: cli.py
